welcome.lessons.welcome.array.array667.Array667.scala.error
array667:12: error: ';' expected but ',' found.
  return cpt6,cpt7
             ^